syntax = "proto3";

package GoGoTalk.ProtoBuf;

import "Result.proto";

message RegisterRequest {
	string UserID = 1;
	string Password = 2;
	string NickName = 3;
	string Signature = 4;
	bytes HeadImageData = 5;
}

message RegisterResponse {
	Result Result = 1; // 0:注册失败 1:注册成功 2:帐号已经存在
}